# dune-multiscale

./: .gitignore  .mailmap  .travis.after_script.bash  .travis.script.bash  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile.am  buildparallel.cmd  code.jsonld  common.mk  config.h.cmake  configure.ac  dune-multiscale.pc.in  dune.module  install-sh  makeCSV.py  submitrange.sh  test_scaleup.cmd  uncrustify.cfg
doc/: CMakeLists.txt  Makefile.am  overview_problems.tex
doc/doxygen/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.cmake.in  Doxyfile.common  Doxyfile.in  Doxylocal
dune/multiscale/: CMakeLists.txt  Makefile.am
dune/multiscale/common/: df_io.cc  df_io.hh  dirichletconstraints.cc  dirichletconstraints.hh  elliptic_analytical_homogenizer.hh  elliptic_homogenizer.cc  elliptic_homogenizer.hh  error_calc.cc  error_calc.hh  error_container.hh  grid_creation.cc  grid_creation.hh  heterogenous.cc  heterogenous.hh  la_backend.hh  main_init.cc  main_init.hh  mygridfactory.hh  mygridfactory.hh.orig  newton_rhs.cc  newton_rhs.hh  output_traits.hh  righthandside_assembler.cc  righthandside_assembler.hh  traits.cc  traits.hh
dune/multiscale/fem/: algorithm.cc  algorithm.hh  algorithm_error.hh  algorithm_step.hh  constantdiffusionmatrix.hh  elliptic_fem_matrix_assembler.cc  elliptic_fem_matrix_assembler.cxx  elliptic_fem_matrix_assembler.hh  fem_solver.hh  fem_traits.hh  hmm_traits.hh  hom_algorithm.cc  hom_algorithm.hh  print_info.cc  print_info.hh
dune/multiscale/grids/cell_grids/: ref_simplex_2d.dgf  unit_cube.dgf  unit_cube_0_centered.dgf  unit_cube_0_centered_COARSE_GRID.dgf
dune/multiscale/grids/periodicgridpart/: intersectioniterator.hh  periodicgridpart.hh  periodicindexset.hh
dune/multiscale/hmm/: algorithm.cc  algorithm.hh  algorithm_error.cc  algorithm_error.hh  algorithm_step.cc  algorithm_step.hh  cell_problem_numbering.cc  cell_problem_numbering.hh  cell_problem_solver.cc  cell_problem_solver.hh  discrete_cell_operator.cc  discrete_cell_operator.hh  elliptic_hmm_matrix_assembler.cc  elliptic_hmm_matrix_assembler.hh  entity_compare.hh  error_estimator.hh  hmm_traits.hh  result.hh  types.hh
dune/multiscale/lod/: algorithm.cc  algorithm.hh  localproblems.cc  localproblems.hh  lod_solver.cc  lod_solver.hh  lod_traits.hh
dune/multiscale/msfem/: algorithm.cc  algorithm.hh  coarse_rhs_functional.cc  coarse_rhs_functional.hh  coarse_scale_assembler.cc  coarse_scale_assembler.hh  coarse_scale_operator.cc  coarse_scale_operator.hh  conservative_flux_solver.hh  diffusion_evaluation.hh  elliptic_msfem_matrix_assembler.cc  elliptic_msfem_matrix_assembler.hh  elliptic_rigorous_msfem_matrix_assembler.hh  estimator_utils.hh  fem_solver.cc  fem_solver.hh  localsolution_proxy.cc  localsolution_proxy.cc.orig  localsolution_proxy.hh  localsolution_proxy.hh.orig  msfem_elliptic_error_estimator.hh  msfem_globals.hh  msfem_grid_specifier.cc  msfem_grid_specifier.hh  msfem_solver.cc  msfem_solver.hh  msfem_traits.hh  proxygridview.cc  proxygridview.hh  rigorous.cc  rigorous.hh  rigorous_msfem_solver.cc  rigorous_msfem_solver.hh  rigorous_msfem_traits.hh
dune/multiscale/msfem/localproblems/: clement_pattern.hh  localgridlist.cc  localgridlist.hh  localgridsearch.cc  localgridsearch.hh  localoperator.cc  localoperator.hh  localproblemsolver.cc  localproblemsolver.hh  localsolutionmanager.cc  localsolutionmanager.hh  subgrid-list.cc  subgrid-list.hh  weighted-clement-operator.cc  weighted-clement-operator.hh
dune/multiscale/operators/: meanvalue.hh  righthandside_assembler.hh
dune/multiscale/operators/cell_problem_solving/: cellproblemsolver.hh
dune/multiscale/operators/disc_func_writer/: Makefile.am  discretefunctionwriter.hh  grid_2d.dgf  grid_3d.dgf
dune/multiscale/operators/errorestimation/: elliptic_error_estimator.hh
dune/multiscale/operators/homogenizer/: elliptic_analytical_homogenizer.hh  elliptic_homogenizer.hh
dune/multiscale/operators/matrix_assembler/: elliptic_fem_matrix_assembler.hh  elliptic_hmm_matrix_assembler.hh  elliptic_msfem_matrix_assembler.hh  new_elliptic_msfem_matrix_assembler.hh
dune/multiscale/operators/msfem_localproblems/: localproblemsolver.hh  new-localproblemsolver.hh
dune/multiscale/problems/: base.cc  base.hh  constants.cc  constants.hh  er2007.cc  er2007.hh  example.ini  overview_problems.tex  permeability2.hh  random.cc  random.hh  random_permeability.hh  selector.cc  selector.hh  spe10.cc  spe10.hh  synthetic.cc  synthetic.hh  synthetic2.cc  synthetic2.hh  tarbert.cc  tarbert.hh  templateproblem.hh  thirteen.cc  thirteen.hh
dune/multiscale/problems/elliptic/: eight.cc  eight.hh  eleven.cc  eleven.hh  example.cc  example.hh  five.cc  five.hh  four.cc  four.hh  fourteen.cc  fourteen.hh  nine.cc  nine.hh  one.cc  one.hh  random.cc  random.hh  random_permeability.hh  selector.cc  selector.hh  seven.cc  seven.hh  six.cc  six.hh  spe10.cc  spe10.hh  tarbert.cc  tarbert.hh  ten.cc  ten.hh  thirteen.cc  thirteen.hh  three.cc  three.hh  toy.cc  toy.hh  twelve.cc  twelve.hh  two.cc  (+1 more)
dune/multiscale/test/: CMakeLists.txt  Makefile.am  Makefile.am.py  common_grids.mini  compare_cgfem.cc  compare_cgfem.mini  compare_hmm.cc  compare_hmm.dgf  compare_lodm.cc  compare_msfem.cc  compare_msfem.mini  error_calc_check.cc  error_calc_check.mini  grid_creation.cc  grid_creation.mini  projection.cc  projection.mini  proxy.cc  proxy.mini  test_common.hh  test_common.hxx
dune/multiscale/tools/: discretefunctionwriter.cc  discretefunctionwriter.hh  improved_l2error.hh  meanvalue.hh  misc.hh  righthandside_assembler.hh  subgrid_io.hh
dune/multiscale/trash-bin/: globalsolver.hh  globalsolverSave.hh
src/: .gitignore  CMakeLists.txt  Makefile.am  cgfem.cc  common.hh  disc_func_reader.cc  elliptic_adaptive_msfem.cc  elliptic_fem.cc  elliptic_hmm.cc  elliptic_hom_fem.cc  elliptic_lodm.cc  elliptic_msfem.cc  elliptic_rigorous_msfem.cc  elliptic_sparse_hmm.cc  error_computation.cc  fail.cc  hmm_config.hh  l2projection.cc  lg-test.cc  make.sh  minimal.cc  ms.param  msfem-1d.cc  msfem.cc  msfem_globals.hh  outputparameter.hh  repl.sh  test.cc  thread_vis.cc
(+216 files in other folders)
